# RM-Tools

./: .gitignore  numba_test.ipynb  pyproject.toml  setup.py
RMTools/: __init__.py
RMTools/RMTools_1D/: __init__.py  bwdepol.py  bwpredict.py  calc_rmsf.py  clean_model.py  do_QUfit_1D_mnest.py  do_RMclean_1D.py  do_RMsynth_1D.py  qufit.py  rmclean.py  rmsynth.py  rmtools_bwpredict.py
RMTools/RMTools_3D/: RMpeakfit_3D.py  __init__.py  do_RMsynth_3D.py  do_fitIcube.py  mk_test_cube_data.py
RMTools/RMtools_1D/: calculate_RMSF.py  clean_model.py  do_RMsynth_1D_fromFITS.py  mk_test_ascii_data.py  rmtools_bwdepol.py  rmtools_bwpredict.py
RMTools/RMutils/: util_misc.py
RMTools/utils/: __init__.py  util_RM.py
RMtools_1D/: calculate_RMSF.py  clean_model.py  do_QUfit_1D_mnest.py  do_RMclean_1D.py  do_RMsynth_1D.py  do_RMsynth_1D_fromFITS.py  mk_test_ascii_data.py  rmtools_bwdepol.py  rmtools_bwpredict.py
RMtools_1D/models_ns/: m1.py  m11.py  m2.py  m3.py  m4.py
RMtools_3D/: RMpeakfit_3D.py  assemble_chunks.py  create_chunks.py  do_RMclean_3D.py  do_RMsynth_3D.py  do_fitIcube.py  extract_region.py  make_freq_file.py  mk_test_cube_data.py
RMutils/: corner.py  exceptions.py  logger.py  mpfit.py  nestle.py  normalize.py  util_FITS.py  util_RM.py  util_misc.py  util_plotFITS.py  util_plotTk.py
RMutils/emcee/: __init__.py  autocorr.py  ensemble.py  interruptible_pool.py  mh.py  mpi_pool.py  ptsampler.py  sampler.py  tests.py  utils.py
docs/: conf.py  modules.rst
docs/_build/doctrees/: RMtools_1D.doctree  RMtools_1D.models_ns.doctree  RMtools_3D.doctree  RMutils.doctree  RMutils.emcee.doctree  environment.pickle  index.doctree  modules.doctree  readme.doctree
docs/_build/html/: .buildinfo  RMtools_1D.html  RMtools_1D.models_ns.html  RMtools_3D.html  RMutils.emcee.html  RMutils.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  (+1 more)
tests/: QA_tests.py  cli_test.py  import_test.py
(+6 files in other folders)
